                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 15-04-2005 fixed: bug [ 1180705 ] Empty Files and illegal fatx file names on SMB Server stops copy Process.
  - 15-04-2005 fixed: Togglebuttons weren't scaled on the fly correct (VideoOSD in PAL60 mode).
  - 15-04-2005 updated: libdvdnav.dll and libdvdcss-2.dll with support for largefiles (>2gb, using our custom headers)
  - 15-04-2005 added: added workround for next chapter/prev chapter which reuse global action_codes
  - 15-04-2005 fixed: Seeking didn't work at all in dvdplayer when playing dvd's
  - 15-04-2005 fixed: Initial highlight was displayed immidiatly when found instead of delayed as it should.
  - 15-04-2005 updated: Korean language file (Thnx to akoakoako)
  - 15-04-2004 updated: Dutch language file (Thnx to tijmengozer)
  - 14-04-2005 added: Music is muted 9dB on ffwd/rewd with mp3 player.
  - 14-04-2005 fixed: Fadelabels didn't fade out in visualisation on press of white.
  - 14-04-2005 fixed: Switching from GUI<->fullscreen video when paused could result in black screens or blank video controls.
  - 14-04-2005 added: #define in Util.h to specify whether to build for skin version 1.3 or not.  Uncomment this line if you want to test for 1.3 compatibility.
  - 14-04-2005 fixed: bug [ 1182993 ] My Pictures - View As button could get stuck on List or Big Icons.
  - 14-04-2005 added: Python bindings for built in XBMC functions. Based on SF patch [ 1175015 ] thanks to thor918.
  - 14-04-2005 added: InfoManager labels: System.BuildDate and System.BuildVersion.
  - 14-04-2005 added: Built-in functions XBMC.SlideShow(dir) and XBMC.RecursiveSlideShow(dir).